# text-to-3D-skill

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  SKILL.md  docker-compose.yml
docs/: INDEX.md
layers/image2mesh/: CHANGES.md  CONTRACT.md  README.md
layers/image2mesh/bench/: README.md  compare.sh  run-bench.sh
layers/image2mesh/bench/results/: baseline-r512.json  trimmed-r512.json
layers/image2mesh/docker/: Dockerfile  Dockerfile.upstream  entrypoint.sh
layers/image2mesh/engine/: CMakeLists.txt  PROVENANCE.md
layers/image2mesh/engine/src/: decimate_qem_vk.cpp  trellis_model.cpp
layers/image2mesh/schema/: error.json  mesh_request.json  mesh_result.json
layers/image2mesh/src/: mesh.py  schema_check.py
layers/image2mesh/tests/: test_mesh.py
layers/pipeline/: CONTRACT.md  README.md
layers/pipeline/schema/: error.json  text_to_mesh_request.json  text_to_mesh_result.json
layers/pipeline/src/: pipeline.py  schema_check.py
layers/pipeline/tests/: test_pipeline.py
layers/preview/: CONTRACT.md  README.md  package.json  vitest.config.js
layers/preview/schema/: error.json  model_list.json
layers/preview/src/: schema_check.py  serve.py
layers/preview/tests/: msw-server.js  setup.js  test_serve.py  ui.test.js
layers/preview/web/: index.html  main.js  scene.js  style.css  ui.js
layers/text2image/: CONTRACT.md  README.md
layers/text2image/schema/: error.json  image_request.json  image_result.json
layers/text2image/src/: klein.py  schema_check.py
layers/text2image/templates/: flux2_klein_t2i.json
layers/text2image/tests/: test_klein.py
scripts/: fetch-models.sh  test.sh  validate-glb.mjs
